--- a/angular.json
+++ b/angular.json
@@ -24,9 +24,11 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "src/assets/css/bootstrap.min.css"
             ],
-            "scripts": []
+            "scripts": ["src/assets/js/bootstrap.bundle.min.js",
+                        "src/assets/js/jquery-3.3.1.slim.min.js"]
           },
           "configurations": {
             "production": {
